Bug 1008619 - Release MediaEngineWebRTC at MediaManager shutdown. r=anant, a=sledru