dom/media/MediaManager.cpp
@@ -1730,7 +1730,9 @@ MediaManager::Observe(nsISupports* aSubject, const char* aTopic,
       mActiveCallbacks.Clear();
       mCallIds.Clear();
       LOG(("Releasing MediaManager singleton and thread"));
+      // Note: won't be released immediately as the Observer has a ref to us
       sSingleton = nullptr;
+      mBackend = nullptr;
     }
 
     return NS_OK;
